--- a/Series/packages.config
+++ b/Series/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FsCheck" version="0.9.4.0" targetFramework="net40-Client" />
-  <package id="FsUnit" version="1.4.0.0-beta" targetFramework="net40-Client" />
+  <package id="FsUnit" version="1.3.1.0" targetFramework="net40-Client" />
   <package id="NUnit" version="2.6.4" targetFramework="net40-Client" />
 </packages>
